--- a/pagina-one.css
+++ b/pagina-one.css
@@ -211,7 +211,7 @@ img#noar:hover{
 
 }
 
-span{
+span.spage1{
     color: whitesmoke;
     margin-left: 5%;
     filter: drop-shadow(2px 2px 1px rgba(0, 0, 0, 0.603));
