--- a/pagina-three.css
+++ b/pagina-three.css
@@ -1,7 +1,8 @@
 .sec3{  
     /* position: relative; */
     background-color: rgb(45, 19, 68);
-    height: 500px;
+    height: 700px;
+    padding: 3%;
 }
 
 table{
@@ -15,18 +16,31 @@ table{
 
 th{
     width: 33%;
+    height: 30px;
+    background-color: rgb(115, 32, 163);
+}
 
-    background-color: violet;
+td{
+    border-bottom: 2px solid rgb(59, 20, 97);
+    transition: .4s ease-in-out;
+}
+
+td:hover{
+    border-bottom: 4px solid rgb(202, 169, 236);
+    background-color: rgba(89, 50, 128, 0.527);
+    cursor: pointer;
 }
 
 ul.weekdays{
-    margin: 1% 10%;
-    width: 90%;
+    margin: auto;
+    width: 70%;
+    /* background-color: red; */
 }
 
 li.week{
     display: inline-block;
     width: 10%;
+    margin-left: 20px;
     height: 40px;
     line-height: 40px;
     border-radius: 40px;
@@ -34,7 +48,6 @@ li.week{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: yellow;
     border: 2px solid yellow;
-    margin: 1%;
 }
 
 li.activate{
