--- a/menu.css
+++ b/menu.css
@@ -94,6 +94,7 @@ input[name=search]:focus{
     color: white;
     font-size: 12pt;
     border: 2px solid yellow;
+    outline: none;
 }
 
 @media screen and (max-width: 600px){
