--- a/pagina-two.css
+++ b/pagina-two.css
@@ -15,6 +15,20 @@ div.news{
     border: 12px solid yellow;
     text-align: justify;
     overflow: hidden;
+    box-sizing: border-box;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-image: 
+    linear-gradient(to bottom, rgba(126, 136, 231, 0.24), rgba(5, 1, 7, 0.493)),
+    url('news1.jpeg');
+    transition: 1s ease-in-out;
+}
+
+div.news:hover{
+    background-image: 
+    linear-gradient(to bottom, rgba(126, 137, 231, 0.52), rgba(50, 6, 68, 0.73)),
+    url('news1.jpeg');
+    background-size: 103%;
 }
 
 div.prog{
@@ -77,26 +91,27 @@ li.li-maisnotic{
 
 p.legenda{
     /* position: relative; */
+    margin: 38% 0 0 0 ;
     z-index: 1;
-    bottom: 2%;
     position: sticky;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 3.2vw;
     font-weight: bold;
     box-sizing: border-box;
-    color: black;
-
+    color: white;
+    filter: drop-shadow(10px 9px 10px black);
 }
 
 span.saiba{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: .8vw;
+    font-weight: bold;
     margin: 4%;
 }
 
 img.principal{
     width: 100%;
-    
+    background-image: linear-gradient(to top, #eb01a5, #d13531);
 }
 
 img.img-main{
