--- a/css/pagina-one.css
+++ b/css/pagina-one.css
@@ -8,7 +8,7 @@ body{
 }
 
 .sec1{
-    background-image: url('fotofundo-editada.png');
+    background-image: url('/images/fotofundo-editada.png');
     background-repeat: no-repeat;
     background-size: 100%;
     height: 800px;
@@ -37,6 +37,7 @@ div.parceiro{
     height: 20%;
     bottom: 0;
     margin: auto;
+    box-sizing: border-box;
     /* border: 2px solid violet; */
 }
 
@@ -99,7 +100,7 @@ div.circle{
     float: left;
     width: 25%;
     height: 100%;
-    background-image: url('logo-canal.png');
+    background-image: url('/images/logo-canal.png');
     background-size: 100%;
     background-repeat: no-repeat;
     /* border: 2px solid white; */
@@ -110,12 +111,13 @@ div.circle{
 }
 
 div.circle:hover{
-    margin: auto;
+    /* margin: auto; */
     /* height: 100%; */
     border-radius: 80px;
-    background-image: url('youtube-logo.png');
+    background-image: url('/images/youtube-logo.png');
     background-size: 100%;
     background-repeat: no-repeat;
+    /* border: 2px solid white */
     /* border: 3px solid whitesmoke; */
 }
 
@@ -231,4 +233,10 @@ span.spage1{
     /* background-color: turquoise; */
     margin-top: 5%;
     margin-left: 4%;
+}
+
+@media screen and (max-width: 600px){
+    div.front-right,div.front-left{
+        height: 20%;
+    }
 }
