--- a/css/pagina-two.css
+++ b/css/pagina-two.css
@@ -20,14 +20,14 @@ div.news{
     background-size: 100%;
     background-image: 
     linear-gradient(to bottom, rgba(126, 136, 231, 0.24), rgba(5, 1, 7, 0.493)),
-    url('news1.jpeg');
+    url('/images/news1.jpeg');
     transition: 1s ease-in-out;
 }
 
 div.news:hover{
     background-image: 
     linear-gradient(to bottom, rgba(126, 137, 231, 0.52), rgba(50, 6, 68, 0.73)),
-    url('news1.jpeg');
+    url('/images/news1.jpeg');
     background-size: 103%;
 }
 
@@ -56,22 +56,22 @@ li.li-news{
     display: block;
     background-color: rgb(226, 212, 240);
     margin-bottom: 2%;
-    height: 40%;
+    height: 30%;
 }
 
 p.pnew{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 1vw;
-    width: 50%;
-    height: 70%;
-    margin-top: 2%;
-    margin-right: 2%;
-    vertical-align: middle;
+    text-transform: uppercase;
+    width: 95%;
+    right: 0;
+    padding: 4% 0% 4% 5%;
+    /* vertical-align: middle; */
     color: rgb(58, 33, 73);
     filter: drop-shadow(1px 1px rgba(255, 255, 255, 0.336));
-    float: right;
+    float: top;
     /* background-color: yellowgreen; */
-    text-align: justify;
+    text-align: left;
     transition: .4s ease-in-out;
 }
 
@@ -106,7 +106,7 @@ span.saiba{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: .8vw;
     font-weight: bold;
-    margin: 4%;
+    margin-left: 2%;
 }
 
 img.principal{
@@ -121,7 +121,7 @@ img.img-main{
 }
 
 img.img-news{
-    width: 40%;
+    width: 25%;
     margin: 2% 2%;
     float: left;
 }
