--- a/css/pagina-two.css
+++ b/css/pagina-two.css
@@ -20,14 +20,14 @@ div.news{
     background-size: 100%;
     background-image: 
     linear-gradient(to bottom, rgba(126, 136, 231, 0.24), rgba(5, 1, 7, 0.493)),
-    url('images/news1.jpeg');
+    url('../images/news1.jpeg');
     transition: 1s ease-in-out;
 }
 
 div.news:hover{
     background-image: 
     linear-gradient(to bottom, rgba(126, 137, 231, 0.52), rgba(50, 6, 68, 0.73)),
-    url('images/news1.jpeg');
+    url('../images/news1.jpeg');
     background-size: 103%;
 }
 
