--- a/css/pagina-one.css
+++ b/css/pagina-one.css
@@ -8,7 +8,7 @@ body{
 }
 
 .sec1{
-    background-image: url('../images/fotofundo-editada.png');
+    background-image: url('/images/fotofundo-editada.png');
     background-repeat: no-repeat;
     background-size: 100%;
     height: 800px;
