--- a/css/menu.css
+++ b/css/menu.css
@@ -78,7 +78,7 @@ input[name=search]{
     border: 3px solid rgb(71, 41, 141);
     padding: 12px;
     border-radius: 4px;
-    background-image: url('/icons/searchico.png');
+    background-image: url('../icons/searchico.png');
     background-position: 10px 10px;
     background-size: 6%;
     background-repeat: no-repeat;
