--- a/css/menu.css
+++ b/css/menu.css
@@ -100,6 +100,7 @@ input[name=search]:focus{
 
 
 #sandwich{
+    cursor: pointer;
     width: 40px;
     margin: auto;
     padding: 5px;
@@ -160,6 +161,9 @@ input[name=search]:focus{
         width: 100%;
         background-color: rgb(40, 6, 65);
         display: none;
+    }
+    .showli{
+        display: inline-block;
     }
     .li-normal:hover{
         background-color: black;
@@ -230,5 +234,14 @@ input[name=search]:focus{
     }
     .li-search{
         width: 20%;
+    }
+    .sec1{
+        height: 480px;
+    }
+    .sec2{
+        height: 380px;
+    }
+    .news{
+        height: 280px;
     }
 }
