--- a/css/pagina-two.css
+++ b/css/pagina-two.css
@@ -150,3 +150,34 @@ img.img-news{
         height: 280px;
     }
 }
+
+@media screen and (max-width: 780px){
+    img.img-news{
+        width: 30%;
+    }
+    p.pnew{
+        width: 61%;
+        font-size: 1.5vw;
+        top: 0;
+        float: right;
+    }
+    span.saiba{
+        font-size: 1.2vw;
+    }
+}
+
+@media screen and (max-width: 600px){
+    img.img-news{
+        width: 40%;
+    }
+    p.pnew{
+        width: 50%;
+        top: 0;
+        font-size: 1.4vw;
+        /* float: right; */
+    }
+    span.saiba{
+        font-size: 1.6vw;
+        float: left;
+    }
+}
